--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,23 @@
 body
 {
-    color: blue;
-    text-align: center;
+    color:#333;
+    text-align: left;
     font-family: "Ariel";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    
+}
+#container
+{
+    width: 70%;
+    padding: 1rm;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
